# cldr-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs  tests.rs  util.rs
src/core/: aliases.rs  gender.rs  mod.rs
